--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
             </div>
             <div id="form">
-                <h1>LOGIN</h1>
+                <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta.</p>
                 <form action="login.php" method="post">
                     <p>
