--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="shortcut icon" href="media/favicon/run-favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/adapt.css">
@@ -17,17 +18,21 @@
             <div id="form">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta.</p>
-                <form action="login.php" method="post">
-                    <p>
-                        <label for="iemail">#</label>
-                        <input type="email" name="email" id="iemail" placeholder="seu e-mail"> <br>
-                        <label for="isenha">#</label>
-                        <input type="password" name="senha" id="isenha" placeholder="sua senha">
-                    </p>
-                    
-                    <p>
-                        <input type="submit" value="Entrar">
-                    </p>
+                <form action="login.php" method="post" autocomplete="on">
+                    <div class="campo">
+                        <span class="material-symbols-outlined">person</span>
+                        <input type="email" name="usu" id="iusu" placeholder=" seu e-mail" autocomplete="email" required maxlength="30">
+                        <label for="iusu">Login</label>
+                    </div>
+                    <div class="campo">
+                        <span class="material-symbols-outlined">vpn_key</span>
+                        <input type="password" name="senha" id="isenha" placeholder=" sua senha" autocomplete="current-password" minlength="8" required>
+                        <label for="isenha">Senha</label>
+                    </div>
+                        <input type="submit" value="Enviar" id="submit-input-login">
+                        <a href="esqueci.html">
+                            Esqueci a senha <span class="material-symbols-outlined">mail</span>
+                        </a>
                 </form>
             </div>
         </section>
