--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                         <input type="password" name="senha" id="isenha" placeholder=" sua senha" autocomplete="current-password" minlength="8" required>
                         <label for="isenha">Senha</label>
                     </div>
-                        <input type="submit" value="Enviar" id="submit-input-login">
-                        <a href="esqueci.html">
+                        <input type="submit" value="Enviar">
+                        <a href="esqueci.html" class="botao">
                             Esqueci a senha <span class="material-symbols-outlined">mail</span>
                         </a>
                 </form>
